--- a/package.json
+++ b/package.json
@@ -11,14 +11,15 @@
   },
   "devDependencies": {
     "autoprefixer": "~1.1.20140327",
-    "gulp": "~3.8.0",
+    "gulp": "^3.9.1",
     "gulp-csso": "~0.2.6",
-    "gulp-jade": "~0.4.0",
+    "gulp-jade": "^1.1.0",
     "gulp-load-plugins": "^1.5.0",
-    "gulp-stylus": "0.0.11",
+    "gulp-stylus": "^2.7.0",
     "markdown": "~0.5.0",
     "markdown-extra": "~0.1.0",
     "promise": "~3.2.0",
-    "request-promise": "0.0.2"
+    "request": "^2.87.0",
+    "request-promise": "^4.2.2"
   }
 }
